@@ -4,14 +4,14 @@ Hash: SHA1
 AUX 1.6.3-unaligned_pointers.patch 2252 RMD160 2f5112c335d8d4b71d6c0bc5cf978e8a514757c1 SHA1 9c3ccbb2176903ec2b0335fe4cfcb5472840a0fa SHA256 c0b6e645c07f00a175efc12ca6967289fa6345840a8aacc5ac18a776d96408bd
 DIST aria2-1.14.1.tar.bz2 1636900 RMD160 e4daa218df0776a144421a1f04eb71c410ff7917 SHA1 143684b662886466b801f456d10997d3e36a0f03 SHA256 a436ffaa9fd678a498d2599f00b3885cdc4eda13953dcf715c9ac4ff95b61ab1
 DIST aria2-1.9.3.tar.bz2 1441999 RMD160 ad5f32c244acd2a5bfc19aafd78a7da886021e29 SHA1 21f429e6d3b9a3904a45dc032b9aa9146ffccc40 SHA256 364f9e5d8dcf3f12bd2683ea0d17274e0088b6dd7f869db35feba4e30ade7613
-EBUILD aria2-1.14.1.ebuild 3203 RMD160 f478fd89521e2d1fe0a58ffb2e1f7f1d33ed0576 SHA1 a7cea192e5a8372b364d31f350527bf387062e8f SHA256 5bbd0220bda5a6bbdeb6df8423f326eb0f55014b6377944fbf2411a760a47710
+EBUILD aria2-1.14.1.ebuild 3314 RMD160 ec3b8856ef9c7a2c4d0443e86179982c2f0d40a4 SHA1 1da07eb2d4c9b5d97877aa92e663dd23b558c70e SHA256 dfcc4700a20e2069e1bd1974f0e35cc8e95de8f6cc19488aaf968b3552cb6b5d
 EBUILD aria2-1.9.3.ebuild 2778 RMD160 eabfe3ba56b3f52ffe7efb58759c844e21c81b06 SHA1 8518c7ac425dc46c00f0bb654b214ebe6b48a453 SHA256 9c9fc6793076e7c214c343024d00fea17d71dd1a6e075346bb83831784d01097
-MISC ChangeLog 14790 RMD160 67c322a6c5c450d65c7031578416e7e9ef0f46ca SHA1 e6570dc4f209f1ed8224cea63b4948253c0f7733 SHA256 9cafc2cb9be294664bc6f6fe74d1db048e3ad7f04c3beffd295e2b6f8e5445fc
+MISC ChangeLog 14943 RMD160 1ecd5f67218454cadbf286135452ae5be8bcbc74 SHA1 426a20eab07b6a405b6f20a06c92c3f3c19862c7 SHA256 90be11decb286189d6eba25713469f467527a6cbc56c196d4d10f61a4f4ecbe0
 MISC metadata.xml 979 RMD160 c6e2d305178428238e62794e92e7c43dafb2a9ba SHA1 e460e5ac7756b286068ec4a30ff0bacd3dc1dc0e SHA256 1c5716c3ddae139c9059bf293d800030942fda629d5c36baba7f542e431e5ba0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk8T0voACgkQX3X2B8XHTokDpQCghD7UJKRZ/9Ls6o83JjKmRbhD
-wBoAmgOMWlx8gkxMrYgGhhG/vQca+l91
-=F1KO
+iEYEARECAAYFAk8T1qYACgkQX3X2B8XHTokYiQCeOwSxbs8jBCtW3SzTuAwL4XOf
+CvoAoIYnVLJ953tSH+tagq2U/fgxp29D
+=cyAs
 -----END PGP SIGNATURE-----
